--- a/Projects.html
+++ b/Projects.html
@@ -70,8 +70,8 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <img src="images/ilab-logo.png" alt="" class="u-image u-image-default u-preserve-proportions u-image-1" data-image-width="196" data-image-height="182">
         <p class="u-custom-font u-font-roboto-slab u-text u-text-1">iLab 2020/2021</p>
+        <img src="images/ilab-logo.png" alt="" class="u-image u-image-default u-preserve-proportions u-image-1" data-image-width="196" data-image-height="182">
       </div></header>
     <section class="u-clearfix u-grey-5 u-section-1" id="sec-6617">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
@@ -117,12 +117,12 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <img src="images/Screenshot2021-01-20at00.02.42.png" alt="" class="u-image u-image-default u-image-1" data-image-width="2224" data-image-height="1608">
         <h3 class="u-text u-text-1">Idea - all in one planting kit for saving the bees</h3>
-        <p class="u-align-justify u-text u-text-2">After several weeks of research and different ideas we came up with a solution - for saving the bees and through bees also the environment, we decided to implement all in one kit for planting flowers, which seeds are specially picked to give the best food for pollinators. Kit includes easily installable box, pack of soil, seeds and online tutorial for setting up the box, starting with planting and keeping flowers alive as long as possible. My task was to create the last part of the kit - webpage for all of these tutorials. Before the gate 2, I had to make the prototype for it.</p>
-        <img src="images/Screenshot2021-01-20at00.02.00.png" alt="" class="u-image u-image-default u-image-2" data-image-width="2124" data-image-height="1612">
-        <img src="images/Screenshot2021-01-20at00.02.35.png" alt="" class="u-image u-image-default u-image-3" data-image-width="2134" data-image-height="1582">
-        <img src="images/Screenshot2021-01-20at00.02.10.png" alt="" class="u-image u-image-default u-image-4" data-image-width="2378" data-image-height="1628">
-        <img src="images/Screenshot2021-01-20at00.02.421.png" alt="" class="u-image u-image-default u-image-5" data-image-width="2224" data-image-height="1608">
-        <img src="images/Screenshot2021-01-20at00.02.24.png" alt="" class="u-image u-image-default u-image-6" data-image-width="2238" data-image-height="1550">
+        <p class="u-align-justify-xl u-text u-text-2">After several weeks of research and different ideas we came up with a solution - for saving the bees and through bees also the environment, we decided to implement all in one kit for planting flowers, which seeds are specially picked to give the best food for pollinators. Kit includes easily installable box, pack of soil, seeds and online tutorial for setting up the box, starting with planting and keeping flowers alive as long as possible. My task was to create the last part of the kit - webpage for all of these tutorials. Before the gate 2, I had to make the prototype for it.</p>
+        <img src="images/Screenshot2021-01-20at00.02.00.png" alt="" class="u-expanded-width-xs u-image u-image-default u-image-2" data-image-width="2124" data-image-height="1612">
+        <img src="images/Screenshot2021-01-20at00.02.35.png" alt="" class="u-expanded-width-xs u-image u-image-default u-image-3" data-image-width="2134" data-image-height="1582">
+        <img src="images/Screenshot2021-01-20at00.02.10.png" alt="" class="u-expanded-width-xs u-image u-image-default u-image-4" data-image-width="2378" data-image-height="1628">
+        <img src="images/Screenshot2021-01-20at00.02.421.png" alt="" class="u-expanded-width-xs u-image u-image-default u-image-5" data-image-width="2224" data-image-height="1608">
+        <img src="images/Screenshot2021-01-20at00.02.24.png" alt="" class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-6" data-image-width="2238" data-image-height="1550">
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-6" id="carousel_4d38">
@@ -149,7 +149,7 @@
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-8" id="sec-126d">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <h1 class="u-text u-text-1">My contribution</h1>
         <p class="u-text u-text-2">During the project, I had 3 main tasks - to make the marketing plan with Anet, to color the pictures for stories in book and to make the webpage for advertisement. Here are some examples about the work I created.&nbsp;&nbsp;</p>
       </div>
@@ -215,10 +215,10 @@
       </div>
     </section>
     <section class="u-align-left u-clearfix u-section-10" src="" id="sec-104a">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <img class="u-expand-resize u-expanded-width u-image u-image-1" src="images/Screenshot2021-01-20at13.53.50.png" data-image-width="1540" data-image-height="1044">
         <h1 class="u-align-justify u-text u-text-body-alt-color u-title u-text-1">Webpage</h1>
-        <p class="u-large-text u-text u-text-body-alt-color u-text-variant u-text-2">It wasn't challenging for me to create the webpage, because I have been worked as a web developer. Nevertheless, I learned many useful things during these times. I found many ways how to make pretty webpage more easily as I did them before. And also I figured out how to host the static webpage with the platform GitHub.</p>
+        <p class="u-large-text u-text u-text-body-alt-color u-text-variant u-text-2">It wasn't challenging for me to create the webpage, because I have been worked as a web developer. Nevertheless, I learn​ed many useful things during these times. I found many ways how to make pretty webpage more easily as I did them before. And also I figured out how to host the static webpage with the platform GitHub.</p>
         <a href="https://viktoriasiigur.github.io/team-chimera/index.html" class="u-border-2 u-border-white u-btn u-btn-round u-button-style u-hover-grey-50 u-none u-radius-50 u-text-body-alt-color u-text-hover-white u-btn-1">Click here to explore the page</a>
       </div>
     </section>
